added router file. minor style revisions

--- a/compiledStyle.css
+++ b/compiledStyle.css
@@ -11,6 +11,9 @@ body {
   height: 100px;
   background: tomato; }
 
+.siteHeader {
+  text-align: center; }
+
 aside {
   background: tomato;
   height: 900px; }
